--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-dashboard-systemmetrics_v1_configmap.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-dashboard-systemmetrics_v1_configmap.yaml
@@ -1306,7 +1306,7 @@ data:
               "type": "prometheus",
               "uid": "${DS_PROMETHEUS}"
             },
-            "definition": "label_values(microgateway_build_info{gateway_kind=\"$gateway_kind\", namespace=\"$namespace\", gateway=\"$gateway_name\"},pod)",
+            "definition": "query_result(max_over_time(microgateway_build_info{container=\"airlock-microgateway-engine\", gateway_kind=\"$gateway_kind\", namespace=\"$namespace\", gateway=\"$gateway_name\"}[$__range]) > 0)",
             "description": "Allows to select the pod to display the system metrics for.",
             "hide": 2,
             "includeAll": true,
@@ -1315,12 +1315,12 @@ data:
             "name": "pod",
             "options": [],
             "query": {
-              "qryType": 1,
-              "query": "label_values(microgateway_build_info{gateway_kind=\"$gateway_kind\", namespace=\"$namespace\", gateway=\"$gateway_name\"},pod)",
+              "qryType": 3,
+              "query": "query_result(max_over_time(microgateway_build_info{container=\"airlock-microgateway-engine\", gateway_kind=\"$gateway_kind\", namespace=\"$namespace\", gateway=\"$gateway_name\"}[$__range]) > 0)",
               "refId": "PrometheusVariableQueryEditor-VariableQuery"
             },
             "refresh": 2,
-            "regex": "",
+            "regex": "/pod=\"([^\"]+)\"/",
             "type": "query"
           }
         ]
@@ -1333,7 +1333,7 @@ data:
       "timezone": "browser",
       "title": "Airlock Microgateway System - Metrics",
       "uid": "ceg3c5leab4ddfzkd",
-      "version": 2,
+      "version": 3,
       "weekStart": ""
     }
 kind: ConfigMap
@@ -1345,6 +1345,6 @@ metadata:
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
     grafana_dashboard: "1"
   name: airlock-microgateway-dashboard-systemmetrics
