--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-dashboard-accessctrllogs_v1_configmap.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-dashboard-accessctrllogs_v1_configmap.yaml
@@ -581,6 +581,6 @@ metadata:
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
     grafana_dashboard: "1"
   name: airlock-microgateway-dashboard-accessctrllogs
