--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-config_v1_configmap.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-config_v1_configmap.yaml
@@ -9,8 +9,6 @@ data:
             # disable the new JSON formatter as it is not omitting empty fields
             # see https://github.com/envoyproxy/envoy/issues/37941
             envoy.reloadable_features.logging_with_fast_json_formatter: false
-            # disable the new http2 codec
-            envoy.reloadable_features.http2_use_oghttp2: false
     admin:
       address:
         socket_address:
@@ -39,6 +37,7 @@ data:
     static_resources:
       listeners:
       - name: probe
+        stat_prefix: probe
         address:
           socket_address:
             address: 0.0.0.0
@@ -75,6 +74,7 @@ data:
                 typed_config:
                   '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
       - name: metrics
+        stat_prefix: metrics
         address:
           socket_address:
             address: 0.0.0.0
@@ -113,9 +113,13 @@ data:
                         '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
       clusters:
       - name: xds_cluster
+        cluster_type:
+          name: envoy.clusters.dns
+          typed_config:
+            '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
+            all_addresses_in_single_endpoint: false
+            respect_dns_ttl: true
         connect_timeout: 1s
-        type: STRICT_DNS
-        respect_dns_ttl: true
         load_assignment:
           cluster_name: xds_cluster
           endpoints:
@@ -345,6 +349,8 @@ data:
     args:
       - "--port"
       - "19004"
+      - "--metrics-port"
+      - "19005"
       - "--config-path"
       - "/app/config/config.json"
     volumeMounts:
@@ -364,8 +370,9 @@ data:
             fieldPath: metadata.namespace
     ports:
       - containerPort: 19004
+      - containerPort: 19005
     livenessProbe:
-      tcpSocket:
+      grpc:
         port: 19004
       initialDelaySeconds: 0
       periodSeconds: 10
@@ -373,7 +380,7 @@ data:
       successThreshold: 1
       timeoutSeconds: 2
     readinessProbe:
-      tcpSocket:
+      grpc:
         port: 19004
       initialDelaySeconds: 0
       periodSeconds: 5
@@ -381,7 +388,7 @@ data:
       successThreshold: 1
       timeoutSeconds: 1
     startupProbe:
-      tcpSocket:
+      grpc:
         port: 19004
       initialDelaySeconds: 0
       periodSeconds: 1
@@ -405,5 +412,5 @@ metadata:
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: airlock-microgateway-operator-config
