--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-leader_monitoring.coreos.com_v1_servicemonitor.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-leader_monitoring.coreos.com_v1_servicemonitor.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: airlock-microgateway-operator-leader
 spec:
   endpoints:
