--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-webhook_v1_service.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-webhook_v1_service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: airlock-microgateway-operator-webhook
 spec:
   ports:
