--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_envoyconfigurations.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_envoyconfigurations.yaml
@@ -2,11 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: envoyconfigurations.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -30,7 +29,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: |-
-          EnvoyConfiguration is the Schema for the envoyconfigurations API
+          EnvoyConfiguration represents the raw configuration of an Airlock Microgateway Engine.
           {{% notice warning %}} EnvoyConfiguration resources may contain sensitive information and thus RBAC permissions should be granted with care. {{% /notice %}}
         properties:
           apiVersion:
@@ -51,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: EnvoyConfigurationSpec defines the desired state of EnvoyConfiguration
+            description: spec defines the envoy configuration.
             properties:
               envoyResources:
                 properties:
@@ -60,45 +59,53 @@ spec:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   endpoints:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   extensions:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   listeners:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   routes:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   runtimes:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   scopedRoutes:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                   secrets:
                     items:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                    x-kubernetes-list-type: atomic
                 type: object
               envoyResourcesRaw:
                 description: |-
-                  EnvoyResourcesRaw defines the desired state for each resource type. The resources are stored as zstd compressed JSON bytes.
+                  envoyResourcesRaw defines the desired state for each resource type. The resources are stored as zstd compressed JSON bytes.
                   For debugging purposes, the resources can be inspected with the following command: `kubectl get envoyconfiguration <name> -ojsonpath='{.spec.envoyResourcesRaw}' | base64 -d | zstd -d | jq`
                 format: byte
                 type: string
@@ -108,55 +115,85 @@ spec:
                 type: string
             type: object
           status:
-            description: EnvoyConfigurationStatus defines the observed state of EnvoyConfiguration
+            description: status describes the current status of the EnvoyConfiguration.
             properties:
               conditions:
+                description: conditions describe the status of the EnvoyConfiguration.
                 items:
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status
-                        to another.
+                      description: |-
+                        lastTransitionTime is the last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
                       format: date-time
                       type: string
                     message:
-                      description: A human-readable message indicating details about
-                        the transition.
+                      description: |-
+                        message is a human readable message indicating details about the transition.
+                        This may be an empty string.
+                      maxLength: 32768
                       type: string
                     observedGeneration:
                       description: |-
-                        ObservedGeneration represents the `.metadata.generation` based on which the condition was set.
-                        For instance, if `.metadata.generation` is currently 12, but the `.status.conditions[x].observedGeneration` is 9, the condition is out of date with respect to the current state of the EnvoyConfiguration.
+                        observedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
                       format: int64
                       minimum: 0
                       type: integer
                     reason:
-                      description: The reason for the condition's last transition.
+                      description: |-
+                        reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                        Producers of specific condition types may define expected values and meanings for this field,
+                        and whether the values are considered a guaranteed API.
+                        The value should be a CamelCase string.
+                        This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
                       type: string
                     status:
-                      description: Status of the condition, one of True, False, Unknown.
+                      description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
                       type: string
                     type:
-                      description: Type of EnvoyConfiguration condition.
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
+                maxItems: 8
                 type: array
+                x-kubernetes-list-map-keys:
+                - type
+                x-kubernetes-list-type: map
               status:
+                description: status indicates the overall status of the EnvoyConfiguration.
+                enum:
+                - Active
+                - Warning
+                - Error
                 type: string
               xds:
-                description: Xds defines the current xDS status for the given node.
+                description: xds describes the current xDS status for this EnvoyConfiguration.
                 properties:
                   resourceTypes:
                     additionalProperties:
-                      description: XdsResourceTypeSyncStatus defines the sync status
-                        of xDS for a specific resource type
+                      description: Synchronization status of a resource type.
                       properties:
                         errorMessage:
-                          description: ErrorMessage defines an optional message why
-                            the currently served resources of this resource type are
-                            rejected by the client.
+                          description: errorMessage indicates the error message provided
+                            by the Airlock Microgateway Engine in case the currently
+                            served resource version has been rejected.
                           type: string
                         resources:
                           additionalProperties:
@@ -164,34 +201,42 @@ spec:
                               for a specific resource
                             properties:
                               version:
-                                description: Version defines the version which is
+                                description: version defines the version which is
                                   currently served for this resource.
+                                maxLength: 128
                                 type: string
                             required:
                             - version
                             type: object
-                          description: Resources defines the resources which are currently
-                            served for this resource type.
+                          description: resources which are currently served for this
+                            resource type.
                           type: object
                         status:
-                          description: Status defines the current sync status of this
-                            resource type.
+                          description: status describes the synchronization status
+                            for this resource type.
+                          enum:
+                          - NotRequested
+                          - Pending
+                          - Sent
+                          - Accepted
+                          - Rejected
                           type: string
                         version:
-                          description: Version defines the version which is currently
-                            served for this resource type.
+                          description: version which is currently served for this
+                            resource type.
+                          maxLength: 128
                           type: string
                       required:
                       - resources
                       - status
                       - version
                       type: object
-                    description: ResourceTypes defines the sync statuses for each
-                      resource type.
+                    description: resourceTypes describes the synchronization status
+                      for each resource type.
                     type: object
                   version:
-                    description: Version defines the version of the underlying xDS
-                      snapshot.
+                    description: version indicates the xDS snapshot version.
+                    format: int64
                     type: integer
                 required:
                 - version
