--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_envoyhttpfilters.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_envoyhttpfilters.yaml
@@ -2,11 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: envoyhttpfilters.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -47,10 +46,10 @@ spec:
           metadata:
             type: object
           spec:
-            description: Specification of the desired additional Envoy HTTP filter.
+            description: spec defines the desired Envoy HTTP filter.
             properties:
               value:
-                description: Value specifies the raw Envoy HTTP filter configuration.
+                description: value specifies the raw Envoy HTTP filter configuration.
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
             type: object
