--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_oidcrelyingparties.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_oidcrelyingparties.yaml
@@ -2,11 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: oidcrelyingparties.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -27,7 +26,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: |-
-          OIDCRelyingParty specifies how the Airlock Microgateway Engine interacts with an OpenID Provider (OP).
+          OIDCRelyingParty defines an OpenID Connect Relying Party (OIDC RP) configuration for interacting with an OpenID Provider (OP) to authenticate users via an OpenID Connect flow.
 
           {{% notice info %}} The OIDC feature requires SessionHandling to be configured in the SidecarGateway. {{% /notice %}}
         properties:
@@ -49,34 +48,35 @@ spec:
           metadata:
             type: object
           spec:
-            description: Specification of the OIDC Relying Party configuration.
+            description: spec defines the desired OIDC relying party configuration.
             properties:
               clientID:
-                description: ClientID specifies the OIDCRelyingParty "client_id".
+                description: clientID specifies the OIDCRelyingParty "client_id".
+                maxLength: 256
                 minLength: 1
                 type: string
               credentials:
-                description: Credentials used for client authentication on the back-channel
+                description: credentials used for client authentication on the back-channel
                   with the authorization server.
                 properties:
                   clientSecret:
-                    description: ClientSecret authenticates with the client password
+                    description: clientSecret authenticates with the client password
                       issued by the OpenID Provider (OP).
                     properties:
                       method:
                         default: BasicAuth
-                        description: Method specifies in which format the client secret
+                        description: method specifies in which format the client secret
                           is sent with the authorization request.
                         enum:
                         - BasicAuth
                         - FormURLEncoded
                         type: string
                       secretRef:
-                        description: SecretRef specifies the kubernetes secret containing
+                        description: secretRef specifies the kubernetes secret containing
                           the client password with key "client.secret".
                         properties:
                           name:
-                            description: Name of the resource
+                            description: name of the resource
                             maxLength: 253
                             minLength: 1
                             type: string
@@ -91,15 +91,15 @@ spec:
                 type: object
               flowTimeout:
                 default: 5m
-                description: FlowTimeout specifies the time window within which an
+                description: flowTimeout specifies the time window within which an
                   initiated OIDC flow can be completed by the client.
                 type: string
               oidcProviderRef:
-                description: OIDCProviderRef selects the OpenID Provider (OP) used
+                description: oidcProviderRef selects the OpenID Provider (OP) used
                   to authenticate users.
                 properties:
                   name:
-                    description: Name of the resource
+                    description: name of the resource
                     maxLength: 253
                     minLength: 1
                     type: string
@@ -107,11 +107,11 @@ spec:
                 - name
                 type: object
               pathMapping:
-                description: PathMapping configures the action matching.
+                description: pathMapping configures the action matching.
                 properties:
                   logoutPath:
                     description: |-
-                      LogoutPath specifies which request paths should initiate a logout.
+                      logoutPath specifies which request paths should initiate a logout.
 
                       WARNING: If the AccessControl policy referencing this OIDCRelyingParty has a request condition, you must currently ensure that it also matches these logout requests.
                     properties:
@@ -120,39 +120,44 @@ spec:
                         properties:
                           contains:
                             description: |-
-                              Contains defines a substring match on the substring specified here. Empty contains match is not allowed, please use regex instead.
+                              contains defines a substring match on the substring specified here. Empty contains match is not allowed, please use regex instead.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           exact:
                             description: |-
-                              Exact defines an explicit match on the string specified here.
+                              exact defines an explicit match on the string specified here.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           ignoreCase:
                             default: false
-                            description: IgnoreCase indicates whether the matching
+                            description: ignoreCase indicates whether the matching
                               should be case-insensitive. In case of a regex match,
                               the regex gets wrapped with a group `(?i:...)`.
                             type: boolean
                           prefix:
                             description: |-
-                              Prefix defines a prefix match on the prefix specified here. Empty prefix is not allowed, please use regex instead.
+                              prefix defines a prefix match on the prefix specified here. Empty prefix is not allowed, please use regex instead.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           regex:
                             description: |-
-                              Regex defines a regex match on the regular expression specified here. Google's [RE2 regex engine](https://github.com/google/re2/wiki/Syntax) is used.
+                              regex defines a regex match on the regular expression specified here. Google's [RE2 regex engine](https://github.com/google/re2/wiki/Syntax) is used.
                               The regex matches only single-line by default, even with ".*". To match a multi-line string prepend (?s) to your regex.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           suffix:
                             description: |-
-                              Suffix defines a suffix match on the suffix specified here. Empty suffix is not allowed, please use regex instead.
+                              suffix defines a suffix match on the suffix specified here. Empty suffix is not allowed, please use regex instead.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                         type: object
@@ -161,7 +166,7 @@ spec:
                     type: object
                   redirectPath:
                     description: |-
-                      RedirectPath specifies which request paths should be interpreted as a callback redirect from the authorization endpoint.
+                      redirectPath specifies which request paths should be interpreted as a callback redirect from the authorization endpoint.
 
                       WARNING: If the AccessControl policy referencing this OIDCRelyingParty has a request condition, you must currently ensure that it also matches these callback redirect requests.
                     properties:
@@ -170,39 +175,44 @@ spec:
                         properties:
                           contains:
                             description: |-
-                              Contains defines a substring match on the substring specified here. Empty contains match is not allowed, please use regex instead.
+                              contains defines a substring match on the substring specified here. Empty contains match is not allowed, please use regex instead.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           exact:
                             description: |-
-                              Exact defines an explicit match on the string specified here.
+                              exact defines an explicit match on the string specified here.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           ignoreCase:
                             default: false
-                            description: IgnoreCase indicates whether the matching
+                            description: ignoreCase indicates whether the matching
                               should be case-insensitive. In case of a regex match,
                               the regex gets wrapped with a group `(?i:...)`.
                             type: boolean
                           prefix:
                             description: |-
-                              Prefix defines a prefix match on the prefix specified here. Empty prefix is not allowed, please use regex instead.
+                              prefix defines a prefix match on the prefix specified here. Empty prefix is not allowed, please use regex instead.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           regex:
                             description: |-
-                              Regex defines a regex match on the regular expression specified here. Google's [RE2 regex engine](https://github.com/google/re2/wiki/Syntax) is used.
+                              regex defines a regex match on the regular expression specified here. Google's [RE2 regex engine](https://github.com/google/re2/wiki/Syntax) is used.
                               The regex matches only single-line by default, even with ".*". To match a multi-line string prepend (?s) to your regex.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                           suffix:
                             description: |-
-                              Suffix defines a suffix match on the suffix specified here. Empty suffix is not allowed, please use regex instead.
+                              suffix defines a suffix match on the suffix specified here. Empty suffix is not allowed, please use regex instead.
                               Only one of exact, prefix, suffix, regex or contains can be set.
+                            maxLength: 1024
                             minLength: 1
                             type: string
                         type: object
@@ -215,24 +225,27 @@ spec:
                 type: object
               redirectURI:
                 description: |-
-                  RedirectURI configures the "redirect_uri" parameter included in the authorization request.
+                  redirectURI configures the "redirect_uri" parameter included in the authorization request.
                   May contain envoy command operators, e.g.: `%REQ(:x-forwarded-proto)%://%REQ(:authority)%/callback`
 
                   WARNING: If the AccessControl policy referencing this OIDCRelyingParty has a request condition, you must currently
                   ensure that it also matches requests to this URI.
+                maxLength: 2048
                 minLength: 1
                 type: string
               scopes:
                 description: |-
-                  Scopes specifies the scopes to request during the OIDC flow.
+                  scopes specifies the scopes to request during the OIDC flow.
                   The mandatory `openid` scope is implicitly added to the list if not already present.
                   Default: `['openid', 'profile']`
 
                   Note: Different OIDCRelyingParties which use the same OIDC Provider and Client ID must request the same scopes for now.
                 items:
+                  maxLength: 1024
                   minLength: 1
                   pattern: ^\S+$
                   type: string
+                maxItems: 32
                 type: array
             required:
             - clientID
