--- a/deploy/charts/airlock-microgateway-cni/values.yaml
+++ b/deploy/charts/airlock-microgateway-cni/values.yaml
@@ -19,10 +19,10 @@ image:
   # -- Image repository from which to pull the Airlock Microgateway CNI image.
   repository: "quay.io/airlock/microgateway-cni"
   # -- Image tag to pull.
-  tag: "4.7.3"
+  tag: "4.8.0-alpha1"
   # -- SHA256 image digest to pull (in the format "sha256:7144f7bab3d4c2648d7e59409f15ec52a18006a128c733fcff20d3a4a54ba44a").
   # Overrides tag when specified.
-  digest: "sha256:02e64ae83a71626a29fff6b93d722c537fbc028fc0fc6934620b2c18b171a498"
+  digest: "sha256:a55aaad6cc9eb20a71d33903812efb2fbebaea12c9fa567b2b470575ccd9cf3a"
   # -- Pull policy for this image.
   pullPolicy: IfNotPresent
 # -- Annotations to add to all Pods.
