--- a/deploy/charts/airlock-microgateway/crds/contentsecurities.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/contentsecurities.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: contentsecurities.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -25,7 +25,16 @@ spec:
       name: v1alpha1
       schema:
         openAPIV3Schema:
-          description: ContentSecurity specifies the options to secure an upstream web application with a Microgateway Engine container.
+          description: |-
+            ContentSecurity defines a policy for filtering and mutating requests and responses to protect an upstream web application. Individual features can be customized using their dedicated CRDs which are referenced from this policy.
+
+            The default policy is designed to be secure and work with most web applications. Security can be further improved by e.g.,
+            - Enforcing an OpenAPI or GraphQL schema to protect API endpoints
+            - Enabling CSRF protection
+            - Increasing the deny rule strictness level
+            - Tightening request limits
+
+            If false positives are encountered (wrongly blocked requests), exceptions may also be configured in the relevant CRDs.
           properties:
             apiVersion:
               description: |-
@@ -45,22 +54,24 @@ spec:
             metadata:
               type: object
             spec:
-              description: Specifies the options to secure an upstream web application with a Microgateway Engine container.
+              description: spec defines the desired content security configuration.
               properties:
                 apiProtection:
                   description: |-
-                    APIProtection defines the relevant configurations to protect APIs.
+                    apiProtection defines the relevant configurations to protect APIs.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
-                    **Deprecated:** Use policies in APIProtection CRD instead.
+
+                    Deprecated: Use policies in APIProtection CRD instead.
                   properties:
                     graphQLRef:
                       description: |-
-                        GraphQLRef selects the relevant GraphQL configuration resource.
+                        graphQLRef selects the relevant GraphQL configuration resource.
                         If undefined, default settings are applied, designed to work with most upstream web application services.
-                        **Deprecated:** Use policies in APIProtection CRD instead.
+
+                        Deprecated: Use policies in APIProtection CRD instead.
                       properties:
                         name:
-                          description: Name of the resource
+                          description: name of the resource
                           maxLength: 253
                           minLength: 1
                           type: string
@@ -69,12 +80,13 @@ spec:
                       type: object
                     openAPIRef:
                       description: |-
-                        OpenAPIRef selects the relevant OpenAPI configuration resource.
+                        openAPIRef selects the relevant OpenAPI configuration resource.
                         If undefined, default settings are applied, designed to work with most upstream web application services.
-                        **Deprecated:** Use policies in APIProtection CRD instead.
+
+                        Deprecated: Use policies in APIProtection CRD instead.
                       properties:
                         name:
-                          description: Name of the resource
+                          description: name of the resource
                           maxLength: 253
                           minLength: 1
                           type: string
@@ -84,11 +96,11 @@ spec:
                   type: object
                 apiProtectionRef:
                   description: |-
-                    APIProtectionRef defines the relevant configurations to protect multiple APIs on different paths.
+                    apiProtectionRef defines the relevant configurations to protect multiple APIs on different paths.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
                   properties:
                     name:
-                      description: Name of the resource
+                      description: name of the resource
                       maxLength: 253
                       minLength: 1
                       type: string
@@ -97,11 +109,11 @@ spec:
                   type: object
                 csrfProtectionRef:
                   description: |-
-                    CSRFProtectionRef selects the relevant CSRF configuration resource.
-                    If undefined, default settings are applied, designed to work with most upstream web application services.
+                    csrfProtectionRef selects the relevant CSRF configuration resource.
+                    If undefined, CSRF protection is disabled.
                   properties:
                     name:
-                      description: Name of the resource
+                      description: name of the resource
                       maxLength: 253
                       minLength: 1
                       type: string
@@ -110,17 +122,17 @@ spec:
                   type: object
                 filter:
                   description: |-
-                    Filter defines the set of filters, e.g. Airlock Deny Rules, to be applied to incoming requests
+                    filter defines the set of filters, e.g. Airlock Deny Rules, to be applied to incoming requests
                     to protect against various attack patterns.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
                   properties:
                     denyRulesRef:
                       description: |-
-                        DenyRulesRef selects the relevant DenyRules configuration resource.
+                        denyRulesRef selects the relevant DenyRules configuration resource.
                         If undefined, default settings are applied, designed to work with most upstream web application services.
                       properties:
                         name:
-                          description: Name of the resource
+                          description: name of the resource
                           maxLength: 253
                           minLength: 1
                           type: string
@@ -130,11 +142,11 @@ spec:
                   type: object
                 headerRewritesRef:
                   description: |-
-                    HeaderRewritesRef selects the relevant HeaderRewrites.
+                    headerRewritesRef selects the relevant HeaderRewrites.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
                   properties:
                     name:
-                      description: Name of the resource
+                      description: name of the resource
                       maxLength: 253
                       minLength: 1
                       type: string
@@ -143,11 +155,11 @@ spec:
                   type: object
                 limitsRef:
                   description: |-
-                    LimitsRef selects the relevant Limits configuration resource.
+                    limitsRef selects the relevant Limits configuration resource.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
                   properties:
                     name:
-                      description: Name of the resource
+                      description: name of the resource
                       maxLength: 253
                       minLength: 1
                       type: string
@@ -156,11 +168,11 @@ spec:
                   type: object
                 parserRef:
                   description: |-
-                    ParserRef selects the relevant Parser configuration resource.
+                    parserRef selects the relevant Parser configuration resource.
                     If undefined, default settings are applied, designed to work with most upstream web application services.
                   properties:
                     name:
-                      description: Name of the resource
+                      description: name of the resource
                       maxLength: 253
                       minLength: 1
                       type: string
