--- a/deploy/charts/airlock-microgateway/crds/envoyclusters.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/envoyclusters.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: envoyclusters.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -45,11 +45,11 @@ spec:
             metadata:
               type: object
             spec:
-              description: Specification of the desired additional Envoy cluster.
+              description: spec defines the desired Envoy cluster.
               properties:
                 value:
                   description: |-
-                    Value specifies the raw Envoy cluster configuration.
+                    value specifies the raw Envoy cluster configuration.
 
                     Note: The 'name' field within this unstructured value must follow the convention: envoycluster/{namespace}/{name}.
                   properties:
