--- a/deploy/charts/airlock-microgateway/crds/envoyextensionpolicies.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/envoyextensionpolicies.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
     gateway.networking.k8s.io/policy: direct
   name: envoyextensionpolicies.microgateway.airlock.com
 spec:
@@ -49,14 +49,14 @@ spec:
             metadata:
               type: object
             spec:
-              description: Spec defines the desired state of the EnvoyExtensionPolicy.
+              description: spec defines the desired envoy extension configuration.
               properties:
                 envoyClusterRefs:
-                  description: EnvoyClusterRefs extends the Airlock Microgateway Engine configuration with additional Envoy clusters.
+                  description: envoyClusterRefs extends the Airlock Microgateway Engine configuration with additional Envoy clusters.
                   items:
                     properties:
                       name:
-                        description: Name of the resource
+                        description: name of the resource
                         maxLength: 253
                         minLength: 1
                         type: string
@@ -69,14 +69,14 @@ spec:
                     - name
                   x-kubernetes-list-type: map
                 envoyHTTPFilterRefs:
-                  description: EnvoyHTTPFilterRefs extends the Airlock Microgateway Engine configuration with additional Envoy HTTP filters.
+                  description: envoyHTTPFilterRefs extends the Airlock Microgateway Engine configuration with additional Envoy HTTP filters.
                   properties:
                     append:
-                      description: Append specifies EnvoyHTTPFilters to insert after the Airlock filters (i.e., after auth, deny rule filtering, header rewrites, etc.).
+                      description: append specifies EnvoyHTTPFilters to insert after the Airlock filters (i.e., after auth, deny rule filtering, header rewrites, etc.).
                       items:
                         properties:
                           name:
-                            description: Name of the resource
+                            description: name of the resource
                             maxLength: 253
                             minLength: 1
                             type: string
@@ -89,11 +89,11 @@ spec:
                         - name
                       x-kubernetes-list-type: map
                     prepend:
-                      description: Prepend specifies EnvoyHTTPFilters to insert before the Airlock filters (i.e., before auth, deny rule filtering, header rewrites, etc.).
+                      description: prepend specifies EnvoyHTTPFilters to insert before the Airlock filters (i.e., before auth, deny rule filtering, header rewrites, etc.).
                       items:
                         properties:
                           name:
-                            description: Name of the resource
+                            description: name of the resource
                             maxLength: 253
                             minLength: 1
                             type: string
@@ -108,7 +108,7 @@ spec:
                   type: object
                 targetRefs:
                   description: |-
-                    TargetRefs are the resources this policy is being attached to. Referenced resources must be in the same namespace as the policy.
+                    targetRefs are the resources this policy is being attached to. Referenced resources must be in the same namespace as the policy.
                     Support: HTTPRoute.
                   items:
                     description: |-
@@ -142,6 +142,11 @@ spec:
                   maxItems: 16
                   minItems: 1
                   type: array
+                  x-kubernetes-list-map-keys:
+                    - group
+                    - kind
+                    - name
+                  x-kubernetes-list-type: map
                   x-kubernetes-validations:
                     - message: 'TargetRef Kind must be: HTTPRoute'
                       rule: self.all(t, t.kind == 'HTTPRoute')
@@ -153,7 +158,7 @@ spec:
                 - targetRefs
               type: object
             status:
-              description: Status describes the current status of the EnvoyExtensionPolicy.
+              description: status describes the current status of the EnvoyExtensionPolicy.
               properties:
                 ancestors:
                   description: |-
@@ -438,10 +443,12 @@ spec:
                         type: string
                     required:
                       - ancestorRef
+                      - conditions
                       - controllerName
                     type: object
                   maxItems: 16
                   type: array
+                  x-kubernetes-list-type: atomic
               required:
                 - ancestors
               type: object
