--- a/deploy/charts/airlock-microgateway/crds/openapis.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/openapis.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
+    controller-gen.kubebuilder.io/version: v0.19.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.3
+    app.kubernetes.io/version: 4.8.0-alpha1
   name: openapis.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -21,7 +21,7 @@ spec:
     - name: v1alpha1
       schema:
         openAPIV3Schema:
-          description: OpenAPI contains the configuration for the OpenAPI specification.
+          description: OpenAPI defines a policy for enforcing an OpenAPI schema.
           properties:
             apiVersion:
               description: |-
@@ -41,51 +41,52 @@ spec:
             metadata:
               type: object
             spec:
-              description: Specification of the desired OpenAPI specification.
+              description: spec defines the desired OpenAPI schema enforcement configuration.
               properties:
                 response:
-                  description: Response defines the validation behavior for responses.
+                  description: response defines the validation behavior for responses.
                   properties:
                     secured:
-                      description: Secured enables response checking.
+                      description: secured enables response checking.
                       properties:
                         validation:
                           default: Lax
-                          description: Validation defines the validation mode for responses.
+                          description: validation defines the validation mode for responses.
                           enum:
                             - Lax
                             - Strict
                           type: string
                       type: object
                     unsecured:
-                      description: Unsecured disables response checking.
+                      description: unsecured disables response checking.
                       type: object
                   type: object
                 settings:
-                  description: Settings defines the settings to configure OpenAPI specification enforcement.
+                  description: settings defines the settings to configure OpenAPI specification enforcement.
                   properties:
                     logging:
-                      description: Logging specifies the access log behavior.
+                      description: logging specifies the access log behavior.
                       properties:
                         maxFailedSubvalidations:
                           default: 10
-                          description: MaxFailedSubvalidations defines the maximum number of failed subvalidations being logged.
+                          description: maxFailedSubvalidations defines the maximum number of failed subvalidations being logged.
                           format: int64
+                          minimum: 0
                           type: integer
                       type: object
                     schema:
-                      description: Schema configures the OpenAPI specification.
+                      description: schema configures the OpenAPI specification.
                       properties:
                         source:
-                          description: Source specifies the OpenAPI v3.0 specification to be enforced.
+                          description: source specifies the OpenAPI v3.0 specification to be enforced.
                           properties:
                             configMapRef:
                               description: |-
-                                ConfigMapRef references the configmap by its name containing the well-known key `openapi.json`. Use the `data` field for plaintext or the `binaryData` for compressed data. Supported compression formats are zstd, gzip or zip.
+                                configMapRef references the configmap by its name containing the well-known key `openapi.json`. Use the `data` field for plaintext or the `binaryData` for compressed data. Supported compression formats are zstd, gzip or zip.
                                 Note: If the provided OpenAPI schema is invalid (e.g., due to syntax errors), the Airlock Microgateway Engine will log an error, OpenAPI validation will always fail, and requests will be blocked.
                               properties:
                                 name:
-                                  description: Name of the resource
+                                  description: name of the resource
                                   maxLength: 253
                                   minLength: 1
                                   type: string
@@ -98,61 +99,67 @@ spec:
                       type: object
                     threatHandlingMode:
                       default: Block
-                      description: ThreatHandlingMode specifies how threats should be handled.
+                      description: threatHandlingMode specifies how threats should be handled.
                       enum:
                         - Block
                         - LogOnly
                       type: string
                     validation:
-                      description: Validation specifies the patterns for the validation behavior.
+                      description: validation specifies the patterns for the validation behavior.
                       properties:
                         authentication:
-                          description: Authentication defines the settings for the authentication scheme.
+                          description: authentication defines the settings for the authentication scheme.
                           properties:
                             oAuth2:
-                              description: OAuth2 specifies the OAuth2 parameters.
+                              description: oAuth2 specifies the OAuth2 parameters.
                               properties:
                                 allowedParameters:
-                                  description: AllowedParameters specifies the allowed parameters for the authentication scheme.
+                                  description: allowedParameters specifies the allowed parameters for the authentication scheme.
                                   properties:
                                     builtIn:
-                                      description: BuiltIn allows configuring a set of predefined allowed parameters.
+                                      description: builtIn allows configuring a set of predefined allowed parameters.
                                       properties:
                                         standardParameters:
                                           default: true
-                                          description: StandardParameters defines whether the allowed parameters should be expanded by the set of common parameters.
+                                          description: standardParameters defines whether the allowed parameters should be expanded by the set of common parameters.
                                           type: boolean
                                       type: object
                                     custom:
-                                      description: Custom allows configuring additional allowed parameters.
+                                      description: custom allows configuring additional allowed parameters.
                                       items:
+                                        maxLength: 256
                                         minLength: 1
                                         type: string
+                                      maxItems: 2048
                                       minItems: 1
                                       type: array
+                                      x-kubernetes-list-type: set
                                   type: object
                               type: object
                             oidc:
-                              description: Oidc specifies the OIDC parameters.
+                              description: oidc specifies the OIDC parameters.
                               properties:
                                 allowedParameters:
-                                  description: AllowedParameters specifies the allowed parameters for the authentication scheme.
+                                  description: allowedParameters specifies the allowed parameters for the authentication scheme.
                                   properties:
                                     builtIn:
-                                      description: BuiltIn allows configuring a set of predefined allowed parameters.
+                                      description: builtIn allows configuring a set of predefined allowed parameters.
                                       properties:
                                         standardParameters:
                                           default: true
-                                          description: StandardParameters defines whether the allowed parameters should be expanded by the set of common parameters.
+                                          description: standardParameters defines whether the allowed parameters should be expanded by the set of common parameters.
                                           type: boolean
                                       type: object
                                     custom:
-                                      description: Custom allows configuring additional allowed parameters.
+                                      description: custom allows configuring additional allowed parameters.
                                       items:
+                                        maxLength: 256
                                         minLength: 1
                                         type: string
+                                      maxItems: 2048
                                       minItems: 1
                                       type: array
+                                      x-kubernetes-list-type: set
                                   type: object
                               type: object
                           type: object
